@@ -1,5 +1,10 @@
 2009-04-01  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance CFSQP gradient handling.
+	* src/cfsqp.cc: Fix gradob and implement gradcn.
+
+2009-04-01  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix test suite.
 	* tests/hs071.hh: Add missing bounds on constraints.
 	* tests/ipopt.at: Test is passed now.
